2008-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): If a filename appears to
	contain a wildcard specification, first check to see if there is
	file matching the unexpanded wildcard prior to engaging in the
	slow task of wildcard expansion.  Without this fix, expanding the
	command line takes a very long time if there are a huge number of
	files in the directory, and some file names appear to contain
	wildcard specifications.  Inspired by SourceForge bug reports [
	1878992 ] "literal square brackets in file name cause large delay"
	and [ 1783209 ] "converting runs slowly when subimage is
	specified", but this might not be the complete fix for the
	problem.

2008-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (VersionCommand): Include a "Large Memory" item
	in the Feature Support list.
	* coders/png.c (RegisterPNGImage): Remove reference to dead PNG
	ftp site.
	* VisualMagick/configure/configure.cpp (InitInstance): Remove
	project dependency on dxguid.lib (Direct-X).

2008-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (DisplayImageCommand): No longer default to
	reading standard input if stdin fails isatty() test.  This
	behavior was causing failure to launch from Gnome and it is
	difficult to work around the issue from within a .desktop file.	
	(AnimateImageCommand): No longer default to
	reading standard input if stdin fails isatty() test.

2007-12-31  Glenn Randers-Pehrson  <glennrp@comcast.net>

	* coders/png.c (ReadOnePNGImage): Ensure that depth is handled
	correctly in Q8 build with 16-bit PNG files.  Addresses
	SourceForge bug 1859467 "16 bit per channel pngs broken".  This
	bug was already fixed in CVS head.

2007-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use some improved tests for POSIX standard types
	available in Autoconf 2.61.

2007-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
