@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2008-01-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/image.c (SetImageInfo): Successfully read existing file
+        names in the form file[123] which were failing to read since they
+        appear to be a valid sub-image specification.
+
+</UL>
+<p>
 2008-01-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
